[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "ObjectNav"
version = "0.1"
authors = [
    {name = "Zager ZHANG", email = "zagerzhang@gmail.com"},
]
description = "ObjectNav"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numba == 0.60.0",
    "rospkg == 1.5.1",
    "numpy == 1.23.5",
    "numpy-quaternion == 2023.0.4",
    "flask == 3.0.3",
    "seaborn == 0.13.2",
    "open3d == 0.18.0",
    "pillow>=9.0.0",
    "transformers >= 4.55.2",
    "timm == 0.4.12",
    "prettytable >= 3.12.0",
    "opencv-python == 4.6.0.66",
    "moviepy == 1.0.3",
    "ultralytics == 8.3.209",
    "clip @ git+https://github.com/ultralytics/CLIP.git",
    "supervision>=0.20.0",
    "fastapi>=0.115.0",
    "uvicorn==0.30.3",
    "modelscope==1.16.1",
    "accelerate==0.32.1",
    "openai>=1.58.1",
    "fastdtw==0.3.4",
    "dtw==1.4.0",
    "habitat2ros @ file:./habitat2ros",
    "langdetect==1.0.9",
    "h5py==3.13.0",
    "gdown==5.2.0",
    "ollama",
    "protobuf==3.20.1",
]

[project.optional-dependencies]
dev = [
    "pre-commit >= 3.1.1",
    "pytest >= 7.2.1",
    "pytest-cov >= 4.0.0",
]
